# qunfold

./: .gitmodules  README.md  api.html  developer-guide.html  experiments.html  flaxtest.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  qunfold.experiments.html  qunfold.html  qunfold.tests.html  search.html  searchindex.js  setup.py
.github/workflows/: ci.yml
_sources/: api.md.txt  developer-guide.md.txt  experiments.md.txt  index.md.txt  modules.rst.txt  qunfold.experiments.rst.txt  qunfold.rst.txt  qunfold.tests.rst.txt
docker/: .gitignore  Dockerfile  Makefile  README.md  build.sh  config.json  run.sh  srun.sh
docs/source/: api.md  conf.py  developer-guide.md  experiments.md  index.md  qunfold.experiments.rst  qunfold.rst
qunfold/: __init__.py  base.py  ensembles.py  losses.py  methods.py  quapy.py  sklearn.py  transformers.py
qunfold/experiments/: create_table.py  lequa.py  ordinal_amazon.py  plot_condition.py
qunfold/experiments/flax/: __init__.py  main.py  pacc.py  plot.py
qunfold/methods/: __init__.py  kernel_density.py  likelihood.py  linear.py
qunfold/methods/linear/: __init__.py  losses.py  representations.py
qunfold/tests/: HDx_X.npy  HDx_fX.npy  __init__.py  benchmark_parallel_quapy.py  performance_HDx.py  performance_KMM.py  scaling.py  solution_time.py
